k3s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shuttle
spec:
  replicas: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sadrasamadi/shuttle-frontend:latest@sha256:631a8e8a3a6533d4fdc1810c019be708cfad4cf2c88ff7d7ef54d58be33d7f79 # {"$imagepolicy": "shuttle:frontend"}
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/assets
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: frontend
