k3s/frontend/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: shuttle
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`app.shuttle.sadra.xyz`)
      kind: Rule
      services:
        - name: frontend
          port: 80
